La bomba entera

--- a/SistemaTienda/src/tienda/presentation/view/FormularioProducto.form
+++ b/SistemaTienda/src/tienda/presentation/view/FormularioProducto.form
@@ -187,7 +187,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="AgregarBt">
           <Properties>
-            <Property name="label" type="java.lang.String" value="Agregar"/>
+            <Property name="text" type="java.lang.String" value="Guardar"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="AgregarBtActionPerformed"/>
